<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context=".ais">


    <View
        android:id="@+id/areaView"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@color/gray"
        android:alpha="0.3"
        app:layout_constraintBottom_toTopOf="@+id/currState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/area"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/view"
        android:gravity="center"
        android:text="@string/obs"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textColorLink="@color/b"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/currState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/obs_get"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_3"

        android:gravity="center"
        android:text="@string/strobs_get"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/currstate_view"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:background="@color/gray"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area" />

    <TextView
        android:id="@+id/currState"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/view"
        android:contentDescription="@string/strgas_good"
        android:gravity="center"
        android:text="@string/strgas_good"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area" />

    <TextView
        android:id="@+id/str1"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/text"
        android:gravity="center"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/obs_get" />

    <TextView
        android:id="@+id/str2"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/text"
        android:gravity="center"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/obs_get" />

</android.support.constraint.ConstraintLayout>